<resources>

    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">Sổ tay lịch sử 12</string>
    <string name="str_btn_load">Load Fragment</string>
    <string name="str_tv_fragment">This is a fragment</string>
    <string name="lastest">Gần đây</string>
    <string name="hightest">Cao nhất</string>
    <string name="lowest">Thấp nhất</string>
    <string name="trangchu_header">TRANG CHỦ</string>
    <string name="trang_chu">Trang chủ</string>
    <string name="noi_dung">Nội dung</string>
    <string name="yeu_thich">Yêu thích</string>
    <string name="huong_dan">Hướng dẫn</string>
    <string name="cai_dat">Cài đặt</string>
    <string name="share_body">Here is the share content body</string>
    <string name="share_via">Chia sẻ qua</string>
    <string name="xoa_node">XÓA</string>
    <string name="title_note">Ghi chú</string>
    <string name="hoan_thanh_note">Xong</string>
    <string name="tim_kiem">Tìm kiếm&#8230;</string>
    <string name="da_xoa">Đã xóa</string>
    <string name="warning_when_delete">Bạn có muốn xóa bài này không?</string>
    <string name="ok_dialog">Đồng ý</string>
    <string name="cancel_dialog">Hủy</string>
    <string name="ic_keyboard_arrow_right">&#xe0c7;</string>
    <string name="ic_mail">&#xe0e1;</string>
    <string name="ic_add">&#xe006;</string>
    <string name="ic_close">&#xe048;</string>
    <string name="ic_email">&#xe087;</string>
    <string name="background">HÌNH NỀN</string>
    <string name="mac_dinh">Mặc định</string>
    <string name="library">Thư viện</string>
    <string name="ic_folder">&#xe09d;</string>
    <string name="ic_person">&#xe105;</string>
    <string name="ic_bookmark">&#xe022;</string>
    <string name="ic_keyboard_arrow_down">&#xe0c5;</string>
    <string name="notification_text">Nhắc lịch học</string>
    <string name="hinh_nen">Hình nền</string>
    <string name="primacy">Chính sách bảo mật</string>
    <string name="email_to_us">Liên hệ với chúng tôi</string>
    <string name="more_app">More app</string>
    <string name="ic_news">&#xe0f6;</string>
    <string name="privacy">Chính sách bảo mật</string>
    <string name="link_baitap123">http://www.baitap123.com/</string>
    <string name="link_baitap123_nohttp">www.baitap123.com</string>
    <string name="ic_bold">&#xe020;</string>
    <string name="ic_earth">&#xe086;</string>
    <string name="bai_tap_123">Bài tập 123</string>


    <string name="menu_class_10">Lớp 10</string>
    <string name="menu_class_11">Lớp 11</string>
    <string name="menu_class_12">Lớp 12</string>

    <string name="menu_logout">Đăng xuất</string>



</resources>
