<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lnbackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_profile12x"
    android:orientation="vertical"
    android:padding="10dp">

    <RelativeLayout
        android:id="@+id/reHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:padding="5dp">

        <ImageButton
            android:id="@+id/btnBackBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_arrow_left" />

        <TextView
            android:id="@+id/txtSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:text="@string/background"
            android:textColor="#fff"
            android:textSize="@dimen/text_header" />
    </RelativeLayout>

    <info.hoang8f.android.segmented.SegmentedGroup

        android:id="@+id/segmented3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/arc_progress"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:checkedButton="@+id/btnLastest"
        android:orientation="horizontal"
        segmentedgroup:sc_border_width="1dp"
        segmentedgroup:sc_checked_text_color="#696969"
        segmentedgroup:sc_corner_radius="5dp"
        segmentedgroup:sc_tint_color="#FFF">

        <RadioButton

            android:id="@+id/btnStill"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:width="0dp"
            android:checked="true"
            android:text="@string/mac_dinh"
            android:textSize="12sp" />


        <RadioButton
            android:id="@+id/btnYourOwn"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:width="0dp"
            android:text="@string/library"
            android:textSize="12sp" />
    </info.hoang8f.android.segmented.SegmentedGroup>

    <FrameLayout
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1" />

</LinearLayout>