<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/header_note"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="#99000000">

        <Button
            android:background="@android:color/transparent"
            android:id="@+id/btnDoneNote"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="#FFF"
            android:textAllCaps="false"
            android:text="@string/hoan_thanh_note"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:singleLine="true"
            android:text="@string/title_note"
            android:textColor="#FFF"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imgBackNode"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:padding="17dp"
            android:src="@drawable/btn_back" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/chien"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header_note"
        android:layout_above="@+id/footer_note">
        <EditText
            android:padding="5dp"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:id="@+id/etNote"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent" />
    </FrameLayout>


    <RelativeLayout
        android:id="@+id/footer_note"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="#99000000">

        <Button
            android:id="@+id/btnXoaNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:background="@android:color/transparent"
            android:text="@string/xoa_node"
            android:textColor="#ff0000"
            android:textSize="15sp" />
    </RelativeLayout>
</RelativeLayout>